Fixes price alignment on homepage. Swaps effects loop for FabFilter

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -1,5 +1,5 @@
 // Homepage
-.home h1, .home h2, .home h3{
+.home h1, .home h2, .home h3, .home .woocommerce ul.products li.product .price {
   text-align: center;
 }
 // Featured zones on Homepage
